# awsbck

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.root  LICENSE-MIT  README.md  cliff.toml  dist-workspace.toml  flake.nix  release-plz.toml
.github/workflows/: build.yml  build_dispatch.yml  ci.yml  clean-artifacts.yml  docker.yml  docker_dispatch.yml  lint.yml  release-plz.yml  release.yml  rust.yml  tests.yml
src/: aws.rs  backup.rs  cli.rs  config.rs  main.rs  prelude.rs
tests/: e2e_test.rs
