[package]
name = "awsbck"
version = "0.2.1"
edition = "2021"
authors = ["Valentin Bersier <vbersier@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utility to backup a folder to AWS S3, once or periodically."
repository = "https://github.com/beeb/awsbck-rs"
readme = "./README.md"
keywords = ["aws", "s3", "backup", "aws-s3"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1"
aws-config = "0.54"
aws-sdk-s3 = "0.24"
aws-smithy-http = "0.54"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
env_logger = "0.10"
flate2 = "1"
log = "0.4"
tar = "0.4"
temp-dir = "0.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
