[package]
name = "awsbck"
version = "0.3.0"
edition = "2021"
authors = ["Valentin Bersier <vbersier@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Utility to backup a folder to AWS S3, once or periodically."
repository = "https://github.com/beeb/awsbck"
readme = "./README.md"
keywords = ["aws", "s3", "backup", "aws-s3"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1"
aws-config = "0.55"
aws-sdk-s3 = "0.25"
aws-smithy-http = "0.55"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
cron = "0.12"
dotenvy = "0.15"
env_logger = "0.10"
flate2 = "1"
log = "0.4"
tar = "0.4"
temp-dir = "0.1"
tokio = { version = "1", features = ["rt", "macros", "signal"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
dockertest = "0.3.1"

[profile.release]
lto = "thin"
strip = true
